# rust-sensor-scd30

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: base.rs  device.rs  lib.rs  main.rs
