[package]
name = "sensor-scd30"
description = "SCD30 environmental sensor driver"
repository = "https://github.com/ryankurte/rust-sensor-scd30"
keywords = ["embedded", "embedded-hal", "scd30", "sensor", "i2c"]
version = "0.3.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[features]
util = [ "structopt", "linux-embedded-hal", "simplelog", "humantime" ]
default = [ "util" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
log = "0.4.8"

structopt = { version = "0.2.15", optional = true }
linux-embedded-hal = { version = "0.2.2", optional = true }
simplelog = { version = "0.5.3", optional = true }
humantime = { version = "1.2.0", optional = true }

[dev-dependencies]
color-backtrace = "0.1.3"
embedded-hal-mock = "0.7.0"
assert_approx_eq = "1.1.0"


[[bin]]
name = "scd30-util"
path = "src/main.rs"
required-features = ["util"]

